refactoring keys